--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -19,7 +19,7 @@
                 <h2>checkout</h2>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="shop-4column.html">shop grid</a></li>
+                    <li class="breadcrumb-item"><a href="shop-4column.html">Orders</a></li>
                     <li class="breadcrumb-item active" aria-current="page">checkout</li>
                 </ol>
             </div>
@@ -35,11 +35,11 @@
         <section class="inner-section checkout-part">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    {% comment %} <div class="col-lg-12">
                         <div class="alert-info">
                             <p>Returning customer? <a href="login.html">Click here to login</a></p>
                         </div>
-                    </div>
+                    </div> {% endcomment %}
                     <div class="col-lg-12">
                         <div class="account-card">
                             <div class="account-title">
@@ -60,66 +60,22 @@
                                             </tr>
                                         </thead>
                                         <tbody>
+                                            {% for item in cartItems  %}
+                                            
+                                           
                                             <tr>
-                                                <td class="table-serial"><h6>01</h6></td>
-                                                <td class="table-image"><img src="images/product/01.jpg" alt="product"></td>
-                                                <td class="table-name"><h6>product name</h6></td>
-                                                <td class="table-price"><h6>$19<small>/kilo</small></h6></td>
-                                                <td class="table-brand"><h6>Fresh Company</h6></td>
-                                                <td class="table-quantity"><h6>3</h6></td>
+                                                <td class="table-serial"><h6>{{ forloop.counter }}</h6></td>
+                                                <td class="table-image"><img src="{{item.product.image.url}}" alt="product"></td>
+                                                <td class="table-name"><h6>{{item.product}}</h6></td>
+                                                <td class="table-price"><h6>${{item.product.price}}</h6></td>
+                                                <td class="table-brand"><h6>{{item.product.brand}}</h6></td>
+                                                <td class="table-quantity"><h6>{{item.quantity}}</h6></td>
                                                 <td class="table-action">
                                                     <a class="view" href="#" title="Quick View" data-bs-toggle="modal" data-bs-target="#product-view"><i class="fas fa-eye"></i></a>
                                                     <a class="trash" href="#" title="Remove Wishlist"><i class="icofont-trash"></i></a>
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <td class="table-serial"><h6>02</h6></td>
-                                                <td class="table-image"><img src="images/product/02.jpg" alt="product"></td>
-                                                <td class="table-name"><h6>product name</h6></td>
-                                                <td class="table-price"><h6>$19<small>/kilo</small></h6></td>
-                                                <td class="table-brand"><h6>Radhuni Masala</h6></td>
-                                                <td class="table-quantity"><h6>5</h6></td>
-                                                <td class="table-action">
-                                                    <a class="view" href="#" title="Quick View" data-bs-toggle="modal" data-bs-target="#product-view"><i class="fas fa-eye"></i></a>
-                                                    <a class="trash" href="#" title="Remove Wishlist"><i class="icofont-trash"></i></a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="table-serial"><h6>03</h6></td>
-                                                <td class="table-image"><img src="images/product/03.jpg" alt="product"></td>
-                                                <td class="table-name"><h6>product name</h6></td>
-                                                <td class="table-price"><h6>$19<small>/kilo</small></h6></td>
-                                                <td class="table-brand"><h6>Pran Prio</h6></td>
-                                                <td class="table-quantity"><h6>2</h6></td>
-                                                <td class="table-action">
-                                                    <a class="view" href="#" title="Quick View" data-bs-toggle="modal" data-bs-target="#product-view"><i class="fas fa-eye"></i></a>
-                                                    <a class="trash" href="#" title="Remove Wishlist"><i class="icofont-trash"></i></a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="table-serial"><h6>04</h6></td>
-                                                <td class="table-image"><img src="images/product/04.jpg" alt="product"></td>
-                                                <td class="table-name"><h6>product name</h6></td>
-                                                <td class="table-price"><h6>$19<small>/kilo</small></h6></td>
-                                                <td class="table-brand"><h6>Real Food</h6></td>
-                                                <td class="table-quantity"><h6>3</h6></td>
-                                                <td class="table-action">
-                                                    <a class="view" href="#" title="Quick View" data-bs-toggle="modal" data-bs-target="#product-view"><i class="fas fa-eye"></i></a>
-                                                    <a class="trash" href="#" title="Remove Wishlist"><i class="icofont-trash"></i></a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="table-serial"><h6>05</h6></td>
-                                                <td class="table-image"><img src="images/product/05.jpg" alt="product"></td>
-                                                <td class="table-name"><h6>product name</h6></td>
-                                                <td class="table-price"><h6>$19<small>/kilo</small></h6></td>
-                                                <td class="table-brand"><h6>Rdhuni Company</h6></td>
-                                                <td class="table-quantity"><h6>7</h6></td>
-                                                <td class="table-action">
-                                                    <a class="view" href="#" title="Quick View" data-bs-toggle="modal" data-bs-target="#product-view"><i class="fas fa-eye"></i></a>
-                                                    <a class="trash" href="#" title="Remove Wishlist"><i class="icofont-trash"></i></a>
-                                                </td>
-                                            </tr>
+                                            {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
@@ -134,19 +90,19 @@
                                     <ul>
                                         <li>
                                             <span>Sub total</span>
-                                            <span>$267.45</span>
+                                            <span>${{subTotal}}</span>
                                         </li>
                                         <li>
                                             <span>delivery fee</span>
-                                            <span>$10.00</span>
+                                            <span>${{deliveryFee}}</span>
                                         </li>
                                         <li>
                                             <span>discount</span>
-                                            <span>$00.00</span>
+                                            <span>${{discount}}</span>
                                         </li>
                                         <li>
                                             <span>Total<small>(Incl. VAT)</small></span>
-                                            <span>$277.00</span>
+                                            <span>${{total}}</span>
                                         </li>
                                     </ul>
                                 </div>
